<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:onClick="boton1"
        app:layout_constraintBottom_toTopOf="@+id/id4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:onClick="boton2"
        app:layout_constraintBottom_toTopOf="@+id/id5"
        app:layout_constraintEnd_toStartOf="@+id/id3"
        app:layout_constraintStart_toEndOf="@+id/id1" />

    <Button
        android:id="@+id/id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton3"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/id6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/id4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton4"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/id7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton5"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/id8"
        app:layout_constraintEnd_toStartOf="@+id/id6"
        app:layout_constraintStart_toEndOf="@+id/id4" />

    <Button
        android:id="@+id/id6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton6"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/id9"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/id7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton7"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton8"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/id9"
        app:layout_constraintStart_toEndOf="@+id/id7" />

    <Button
        android:id="@+id/id9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton9"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="545dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="356dp" />

    <Button
        android:id="@+id/idRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resta"
        android:onClick="restar"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iddividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="dividir"
        android:text="@string/divi"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <Button
        android:id="@+id/idMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiplicar"
        android:text="@string/multi"
        app:layout_constraintBottom_toTopOf="@+id/iddividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/idSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="sumar"
        android:text="@string/suma"
        app:layout_constraintBottom_toTopOf="@+id/idRestar"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="209dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="195dp" />

    <Button
        android:id="@+id/idIgual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resultado"
        android:text="@string/igual"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSumar" />

    <Button
        android:id="@+id/idCE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="borrar"
        android:text="@string/ce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/idMultiplicar" />

</androidx.constraintlayout.widget.ConstraintLayout>